update product language

--- a/producto/piercing-aftercare-gel.html
+++ b/producto/piercing-aftercare-gel.html
@@ -143,7 +143,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Piercing Aftercare
+                        <h2 class="product-details-title">Gel Hidratante
                             </h>
                     </div>
                     <div class="row">
@@ -154,10 +154,11 @@
                         <h1 class="product-details-text">28 g.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Neek'dna Gel Hidratante para después de perforarse es el
-                            auxiliar indicado para el cuidado de tus perforaciones después de cada lavado, dado que
-                            ayuda a mantener limpia la herida de agentes contaminantes y acelera el proceso de curación
-                            gracias a sus ingredientes con propiedades cicatrizantes, desinflamatorias y antisépticas.
+                        <p class="product-details-text product-description">
+                            Neek'dna Gel Hidratante para después de perforarse es el auxiliar indicado para el cuidado
+                            de tus perforaciones después de cada lavado, dado que ayuda a mantener limpia la herida de
+                            agentes contaminantes y acelera el proceso de curación gracias a sus ingredientes con
+                            propiedades cicatrizantes, desinflamatorias y antisépticas.
                         </p>
                     </div>
                     <div class="row">
@@ -180,10 +181,15 @@
                                     <div class="card collapse-body">
                                         Neek'dna Gel Hidratante está formulado y enriquecido con ingredientes naturales
                                         de bondades cicatrizantes, desinflamatorias y antisépticas que mejoran y
-                                        aceleran
-                                        el proceso de curación, debido a que forman una capa protectora la cual ayuda a
-                                        mantener limpia la zona de todos aquellos agentes que ponen en riesgo la
+                                        aceleran el proceso de curación, debido a que forman una capa protectora la cual
+                                        ayuda a mantener limpia la zona de todos aquellos agentes que ponen en riesgo la
                                         herida.<br>
+                                        Neek'dna Gel Hidratante NO está diseñado para detener el rechazo de implantes,
+                                        joyería de baja calidad o materiales no biocompatibles, como tampoco heridas
+                                        mayores provocadas por malos procedimientos de colocación.<br>
+                                        Recuerda que para tener un piercing o implante exitoso es necesario acudir con
+                                        un perforador profesional y experimentado seguido de la correcta aplicación de
+                                        tu Neek'dna Gel Hidratante.
                                     </div>
                                 </div>
                             </div>
@@ -390,17 +396,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
