--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -143,7 +143,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Tattoo Aftercare</h>
+                        <h2 class="product-details-title">Pomada Humectante</h>
                     </div>
                     <div class="row">
                         <h3 class="product-details-subtitle">Pomada Humectante para después de tatuarse
@@ -154,10 +154,10 @@
                         <h1 class="product-details-text">28 g.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Pomada Humectante para después de tatuarse, es el complemento
-                            ideal
-                            en el cuidado de la piel recién tatuada, dado que ayuda al proceso de regeneración cutánea,
-                            protege la piel del medio ambiente y la mantiene humectada.</p>
+                        <p class="product-details-text product-description">Pomada Humectante para después de tatuarse,
+                            es el complemento
+                            ideal en el cuidado de la piel recién tatuada, dado que ayuda al proceso de regeneración
+                            cutánea, protege la piel del medio ambiente y la mantiene humectada.</p>
                     </div>
                     <div class="row">
                         <a href="/producto/tattoo-aftercare.html"><button type="button"
@@ -176,13 +176,22 @@
                                 </div>
                                 <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
+                                        Neek'dna Pomada Humectante es un producto exento de agua, el cual genera el
+                                        ambiente ideal para curar la piel dañada o irritada mediante la creación de una
+                                        barrera semipermeable para la piel que la protege del medio ambiente, regula la
+                                        pérdida de vapor de agua y proporciona una gran hidratación a la zona
+                                        tatuada.<br>
                                         Neek'dna Pomada Humectante hará posible el fácil desprendimiento de la piel
-                                        dañada,
-                                        dando paso a una nueva piel completamente sana y de excelente apariencia gracias
-                                        a
-                                        sus ingredientes naturales de altos contenidos vitamínicos, como resultado se
-                                        podrán
-                                        apreciar los colores radiantes e intensos del tatuaje.
+                                        dañada, dando paso a una nueva piel completamente sana y de excelente apariencia
+                                        gracias a sus ingredientes naturales de altos contenidos vitamínicos, como
+                                        resultado se podrán apreciar los colores radiantes e intensos del tatuaje.<br>
+                                        Neek'dna Pomada Humectante NO está diseñada para detener reacciones alérgicas a
+                                        pigmentos o a los componentes del material utilizado durante el procedimiento,
+                                        como tampoco laceraciones provocadas por malas técnicas aplicadas al
+                                        tatuaje.<br>
+                                        Recuerda que para tener un tatuaje exitoso es necesario acudir con un tatuador
+                                        experimentado seguido de la correcta aplicación de Neek'dna Pomada
+                                        Humectante.<br>
                                     </div>
                                 </div>
                             </div>
@@ -400,17 +409,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
