--- a/producto/tattoo-moisturizing-balm.html
+++ b/producto/tattoo-moisturizing-balm.html
@@ -142,8 +142,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Tattoo Moisturizing Balm
-
+                        <h2 class="product-details-title">Bálsamo Humectante
                             </h>
                     </div>
                     <div class="row">
@@ -154,7 +153,8 @@
                         <h1 class="product-details-text">250 g.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Neek'dna Bálsamo humectante para tatuar crea una barrera entre
+                        <p class="product-details-text product-description">Neek'dna Bálsamo humectante para tatuar crea
+                            una barrera entre
                             la piel, el ambiente y los restos del pigmento, facilitando la limpieza de los excedentes,
                             evitando que los colores se mezclen unos con otros y que el stencil no sea fácilmente
                             borrado. Actúa también como lubricante durante el tatuado, permitiendo que los pigmentos
@@ -388,17 +388,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
