--- a/productos.html
+++ b/productos.html
@@ -106,7 +106,7 @@
                 <div class="row">
                     <div class="col-6 text-center">
                         <img src="assets/img/products/tattoo_aftercare/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Tattoo Aftercare</h3>
+                        <h3 class="product-subtitle">Pomada Humectante</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-aftercare.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-6 text-center">
                         <img src="assets/img/products/tattoo_cleansing_gel/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Tattoo Cleansing Gel</h3>
+                        <h3 class="product-subtitle">Gel Limpiador</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-cleansing-gel.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="col-6 text-center">
                         <img src="assets/img/products/skin_tattoo_moist/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Skin Tattoo Moisturiser</h3>
+                        <h3 class="product-subtitle">Crema Humectante</h3>
                         <div class="product-button-container">
                             <a href="/producto/skin-tattoo-moisturiser.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -145,7 +145,7 @@
                 <div class="row">
                     <div class="col-6 text-center">
                         <img src="assets/img/products/piercing_aftercare_gel/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Piercing Aftercare</h3>
+                        <h3 class="product-subtitle">Gel Hidratante</h3>
                         <div class="product-button-container">
                             <a href="/producto/piercing-aftercare-gel.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-6 text-center">
                         <img src="assets/img/products/piercing_aftercare_sol/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Piercing Aftercare</h3>
+                        <h3 class="product-subtitle">Solución de Limpieza</h3>
                         <div class="product-button-container">
                             <a href="/producto/piercing-aftercare-sol.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -169,7 +169,7 @@
                 <div class="row">
                     <div class="col-6 col-lg-3 text-center">
                         <img src="assets/img/products/dermo_clean_foam/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Dermo Clean Foam</h3>
+                        <h3 class="product-subtitle">Espuma Dermolimpiadora</h3>
                         <div class="product-button-container">
                             <a href="/producto/dermo-clean-foam.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-6 col-lg-3 text-center">
                         <img src="assets/img/products/eco_recarga/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">ECO-RECARGA Dermo Clean Foam</h3>
+                        <h3 class="product-subtitle">ECO-RECARGA Espuma</h3>
                         <div class="product-button-container">
                             <a href="/producto/eco-recarga-dermo-clean-foam.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -185,7 +185,7 @@
                     </div>
                     <div class="col-6 col-lg-3 text-center">
                         <img src="assets/img/products/tattoo_moist_balm/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Tattoo Moisturizing Balm</h3>
+                        <h3 class="product-subtitle">Bálsamo Humectante</h3>
                         <div class="product-button-container">
                             <a href="/producto/tattoo-moisturizing-balm.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-6 col-lg-3 text-center">
                         <img src="assets/img/products/waste_absorbent/cover.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Waste Absorbent</h3>
+                        <h3 class="product-subtitle">Absorbente de Residuos</h3>
                         <div class="product-button-container">
                             <a href="/producto/waste-absorbent.html"><button type="button"
                                     class="btn btn-dark button-product">Ver</button></a>
@@ -246,17 +246,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
