--- a/contacto.html
+++ b/contacto.html
@@ -263,17 +263,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
