--- a/index.html
+++ b/index.html
@@ -97,44 +97,28 @@
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <!-- <div class="carousel-item active">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left align-self-center">
-                                <h1 class="h1">Piercing Aftercare una mezcla calmante y humectante.</h1>
-                                <h3>Usa productos diseñados para sanar, no para irritar.
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-aftercare">
                     <a href="productos.html#tattoo-aftercare"><img class="img-fluid w-100"
                             src="./assets/img/banners/aftercare.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-piercing">
                     <a href="productos.html#piercing"><img class="img-fluid w-100"
                             src="./assets/img/banners/piercing.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-protect">
                     <a href="productos.html#pro-tec"><img class="img-fluid w-100" src="./assets/img/banners/protect.png"
                             alt="">
                     </a>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-skincare">
                     <a href="productos.html#tattoo-skincare"><img class="img-fluid w-100"
                             src="./assets/img/banners/skincare.png" alt="">
@@ -213,7 +197,7 @@
                                         </div>
 
                                         <div class="col-3">
-                                            <a href="https://www.instagram.com/pankeom/">
+                                            <a href="https://www.instagram.com/pankeom/" target="_blank">
                                                 <img class="amb-img" src="assets/img/panke_embajador.png"
                                                     alt="Panke 0M">
                                             </a>
@@ -226,8 +210,10 @@
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/the_mak_evans_embajador.png"
-                                                alt="The Mak Evans">
+                                            <a href="https://www.instagram.com/themakevans/" target="_blank">
+                                                <img class="amb-img" src="assets/img/the_mak_evans_embajador.png"
+                                                    alt="The Mak Evans">
+                                            </a>
                                         </div>
 
                                     </div>
@@ -282,43 +268,50 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <a href="https://www.instagram.com/alieninkspiral/" target="_blank"><img
-                                                    class="amb-img  m-auto" src="assets/img/alienk_embajador.png"
-                                                    alt="Alienk Inspieral"></a>
+                                            <a href="https://www.instagram.com/alieninkspiral/" target="_blank">
+                                                <img class="amb-img  m-auto" src="assets/img/alienk_embajador.png"
+                                                    alt="Alienk Inspieral">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <a href="https://www.instagram.com/daniparta/" target="_blank"> <img
-                                                    class="amb-img  m-auto" src="assets/img/dani_embajador.png"
-                                                    alt="Dani Parta"></a>
+                                            <a href="https://www.instagram.com/daniparta/" target="_blank">
+                                                <img class="amb-img  m-auto" src="assets/img/dani_embajador.png"
+                                                    alt="Dani Parta">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <a href="https://www.instagram.com/edetsu/" target="_blank"><img
-                                                    class="amb-img m-auto" src="assets/img/edetsu_embajador.png"
-                                                    alt="Edetsu"></a>
+                                            <a href="https://www.instagram.com/edetsu/" target="_blank">
+                                                <img class="amb-img m-auto" src="assets/img/edetsu_embajador.png"
+                                                    alt="Edetsu">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
-                                    <div class="row"><a href="https://www.instagram.com/pankeom/" target="_blank"></a>
+                                    <div class="row">
                                         <div class="col-12 d-flex">
-                                            <img class="amb-img  m-auto" src="assets/img/panke_embajador.png"
-                                                alt="Panke 0m">
-                                        </div></a>
+                                            <a href="https://www.instagram.com/pankeom/" target="_blank">
+                                                <img class="amb-img  m-auto" src="assets/img/panke_embajador.png"
+                                                    alt="Panke 0m">
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-12 d-flex">
-                                            <img class="amb-img  m-auto" src="assets/img/the_mak_evans_embajador.png"
-                                                alt="The Mak Evans">
+                                            <a href="https://www.instagram.com/themakevans/" target="_blank">
+                                                <img class="amb-img  m-auto"
+                                                    src="assets/img/the_mak_evans_embajador.png" alt="The Mak Evans">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -365,7 +358,7 @@
                             data-bs-ride="carousel">
                             <!--Slides-->
                             <div class="product-links-wap" role="listbox">
-                                <div class="carousel-item active">
+                                <div class="carousel-item active" data-bs-interval="2000">
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#tattoo-aftercare"> <img class="amb-img"
@@ -373,7 +366,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#piercing"> <img class="amb-img"
@@ -382,7 +375,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#pro-tec"><img class="amb-img"
@@ -391,7 +384,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#tattoo-skincare"> <img class="amb-img"
@@ -561,17 +554,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
