--- a/producto/dermo-clean-foam.html
+++ b/producto/dermo-clean-foam.html
@@ -144,8 +144,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Dermo Clean Foam
-
+                        <h2 class="product-details-title">Espuma Dermolimpiadora
                             </h>
                     </div>
                     <div class="row">
@@ -156,10 +155,11 @@
                         <h1 class="product-details-text">160 ml.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Neek´dna Espuma dermolimpiadora, es una espuma especialmente
+                        <p class="product-details-text product-description">Neek´dna Espuma dermolimpiadora, es una
+                            espuma especialmente
                             diseñada para limpiar de forma adecuada la piel, calmar la irritación, refrescar y remover
                             los excesos de pigmento de forma efectiva evitando que los colores se mezclen, recomendada
-                            también para el afeitado de la piel antes de tatuar.</p>
+                            también para el afeitado de la piel antes de tatuar..</p>
                     </div>
                     <div class="row">
                         <a href="/producto/tattoo-aftercare.html"><button type="button"
@@ -185,7 +185,7 @@
                                         Limpia la zona a tatuar sin dejar la piel reseca. Refresca la piel y ayuda a
                                         calmar el ardor durante el proceso de tatuado. Entre sus ingredientes activos,
                                         se encuentra el Aloe Vera que evita irritaciones y rojeces, permitiendo una
-                                        perfecta limpieza de restos de tinta.<br>
+                                        perfecta limpieza de restos de tinta.
                                     </div>
                                 </div>
                             </div>
@@ -388,17 +388,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
