--- a/producto/piercing-aftercare-sol.html
+++ b/producto/piercing-aftercare-sol.html
@@ -145,7 +145,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Piercing Aftercare
+                        <h2 class="product-details-title">Solución de Limpieza
                             </h>
                     </div>
                     <div class="row">
@@ -156,7 +156,8 @@
                         <h1 class="product-details-text">65 ml.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Neek'dna Solución de limpieza para uso dermatológico es el mejor
+                        <p class="product-details-text product-description">Neek'dna Solución de limpieza para uso
+                            dermatológico es el mejor
                             aliado para la limpieza de tu nueva perforación de manera sencilla, rápida, práctica y
                             segura.</p>
                     </div>
@@ -182,6 +183,10 @@
                                         la perforación sin irritación, ni ardor.<br>
                                         Previene infecciones al eliminar residuos y bacterias.<br>
                                         Favorece el tener una cicatrización más rápida y segura.<br>
+                                        Neek'dna Solución de limpieza para uso dermatológico rocía el producto sin tener
+                                        contacto directo para mayor higiene y comodidad.<br>
+                                        Pulveriza en cualquier posición, incluso en zonas difíciles de alcanzar.<br>
+                                        Tiene el tamaño ideal para llevarlo a todos lados.<br>
                                     </div>
                                 </div>
                             </div>
@@ -384,17 +389,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
