--- a/producto/skin-tattoo-moisturiser.html
+++ b/producto/skin-tattoo-moisturiser.html
@@ -143,8 +143,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Skin Tattoo Moisturiser
-
+                        <h2 class="product-details-title">Crema Humectante
                             </h>
                     </div>
                     <div class="row">
@@ -155,7 +154,8 @@
                         <h1 class="product-details-text">120 ml.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">La piel tatuada requiere cuidado especial, por ello Neek’dna
+                        <p class="product-details-text product-description">La piel tatuada requiere cuidado especial,
+                            por ello Neek’dna
                             Crema Humectante para piel tatuada fue desarrollada específicamente para atender las
                             necesidades de la piel tatuada al estar compuesta por una fórmula 3 en 1, la cual humecta y
                             suaviza significativamente la barrera de la piel e incorpora protección solar.</p>
@@ -216,11 +216,11 @@
                                 </div>
                                 <div class="collapse" id="collapsePrecauciones">
                                     <div class="card collapse-body">
-                                        No aplique en piel recién tatuada.
-                                        Para uso externo solamente.
-                                        Evite el contacto con los ojos.
-                                        En caso de molestias, descontinúe su uso y consulte a su médico.
-                                        No se deje al alcance de los niños.
+                                        No aplique en piel recién tatuada.<br>
+                                        Para uso externo solamente.<br>
+                                        Evite el contacto con los ojos.<br>
+                                        En caso de molestias, descontinúe su uso y consulte a su médico.<br>
+                                        No se deje al alcance de los niños.<br>
                                     </div>
                                 </div>
                             </div>
@@ -304,7 +304,7 @@
                             <li class="recommendations-carousel__slide">
                                 <figure>
                                     <div>
-                                        <img src="../assets/img/reccomendations/4-reaplique-al-sentir.svg" alt="">
+                                        <img src="../assets/img/reccomendations/4-reaplicar.svg" alt="">
                                     </div>
 
                                 </figure>
@@ -394,17 +394,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
