--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -143,7 +143,7 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Tattoo Cleansing Gel
+                        <h2 class="product-details-title">Gel Limpiador
                             </h>
                     </div>
                     <div class="row">
@@ -154,7 +154,8 @@
                         <h1 class="product-details-text">28 g.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Utilizar Neek'dna Gel Limpiador para tatuajes para llevar a cabo
+                        <p class="product-details-text product-description">Utilizar Neek'dna Gel Limpiador para
+                            tatuajes para llevar a cabo
                             una rutina diaria de limpieza adecuada del tatuaje, asegurando así el mantenerlo limpio,
                             sano y en las mejores condiciones para su curación.</p>
                     </div>
@@ -400,17 +401,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
