--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -141,7 +141,8 @@
                 <!-- End Slider -->
                 <div class="col-xs-12 col-lg-6">
                     <div class="row">
-                        <h2 class="product-details-title">Waste Absorbent
+                        <h2 class="product-details-title">Absorbente de Residuos
+
                             </h>
                     </div>
                     <div class="row">
@@ -152,7 +153,8 @@
                         <h1 class="product-details-text">160 ml.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text">Neek'dna Absorbente de residuos está diseñado para llevar a cabo
+                        <p class="product-details-text product-description">Neek'dna Absorbente de residuos está
+                            diseñado para llevar a cabo
                             la absorción de los residuos acuosos de tinta utilizados en el proceso de tatuaje,
                             facilitando así el tener un mejor y más seguro control en el manejo de los residuos
                             infecciosos en el área de trabajo y su posterior deshecho.</p>
@@ -175,13 +177,14 @@
                                 </div>
                                 <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        Neek'dna Absorbente de residuos puede solidificar hasta 50 veces su propio peso
-                                        en
-                                        minutos, lo cual permite tener un mejor control y más higiénico manejo de los
-                                        residuos
-                                        acuosos infecciosos resultantes del proceso de tatuado en el área de trabajo,
-                                        además de
-                                        hacer más sencillo y seguro su posterior deshecho.
+                                        Neek´dna Espuma dermolimpiadora es el complemento ideal de nuestro ya comprobado
+                                        Neek´dna Bálsamo humectante para tatuar, convirtiéndose en las herramientas
+                                        perfectas para facilitar el trabajo de los artistas del tatuaje.<br>
+                                        Limpia la zona a tatuar sin dejar la piel reseca. Refresca la piel y ayuda a
+                                        calmar el ardor durante el proceso de tatuado. Entre sus ingredientes activos,
+                                        se encuentra el Aloe Vera que evita irritaciones y rojeces, permitiendo una
+                                        perfecta limpieza de restos de tinta.
+
                                     </div>
                                 </div>
                             </div>
@@ -388,17 +391,13 @@
                     </p>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:44eab3f6-523c-47fe-950a-f2e8487f2fc1"
-                        target="_blank">
+                    <a class="anchor-numb" href="/terminos-y-condiciones-neekdna.html" target="_blank">
                         <p class="mb-0 text-tos">Términos y condiciones
                         </p>
                     </a>
                 </div>
                 <div class="col-12 col-lg-8 mx-auto text-center">
-                    <a class="anchor-numb"
-                        href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:5b437d54-88a8-4e3f-9184-73fd0800029b"
-                        target="_blank">
+                    <a class="anchor-numb" href="/aviso-de-privacidad.html" target="_blank">
                         <p class="mb-0 text-tos">Aviso de Privacidad
                         </p>
                     </a>
