Added titles to images

--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
             <div class="carousel-item active" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-aftercare">
                     <a href="productos.html#tattoo-aftercare"><img class="img-fluid w-100"
-                            src="./assets/img/banners/aftercare.png" alt="">
+                            src="./assets/img/banners/aftercare.png" alt="Tattoo Aftercare" title="Tattoo Aftercare">
                     </a>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-piercing">
-                    <a href="productos.html#piercing"><img class="img-fluid w-100"
-                            src="./assets/img/banners/piercing.png" alt="">
+                    <a href="productos.html#piercing"><img class="img-fluid w-100" alt="Piercing Aftercare"
+                            title="Piercing Aftercare" src="./assets/img/banners/piercing.png">
                     </a>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-protect">
                     <a href="productos.html#pro-tec"><img class="img-fluid w-100" src="./assets/img/banners/protect.png"
-                            alt="">
+                            alt="Pro-tec" title="Pro-tec">
                     </a>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div class="container-fluid carousel-img-skincare">
                     <a href="productos.html#tattoo-skincare"><img class="img-fluid w-100"
-                            src="./assets/img/banners/skincare.png" alt="">
+                            src="./assets/img/banners/skincare.png" alt="Tattoo Skincare" title="Tattoo Skincare">
                     </a>
                 </div>
             </div>
@@ -362,7 +362,8 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#tattoo-aftercare"> <img class="amb-img"
-                                                    src="assets/img/lineas/aftercare.png" alt="Aftercare"></a>
+                                                    src="assets/img/lineas/aftercare.png" alt="Tattoo Aftercare"
+                                                    title="Tattoo Aftercare"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -370,7 +371,8 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#piercing"> <img class="amb-img"
-                                                    src="assets/img/lineas/piercing.png" alt="Piercing">
+                                                    src="assets/img/lineas/piercing.png" alt="Piercing Aftercare"
+                                                    title="Piercing Aftercare">
                                             </a>
                                         </div>
                                     </div>
@@ -379,7 +381,7 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#pro-tec"><img class="amb-img"
-                                                    src="assets/img/lineas/protect.png" alt="Protect">
+                                                    src="assets/img/lineas/protect.png" alt="Pro-tec" title="Pro-tec">
                                             </a>
                                         </div>
                                     </div>
@@ -388,7 +390,8 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <a href="productos.html#tattoo-skincare"> <img class="amb-img"
-                                                    src="assets/img/lineas/skincare.png" alt="Skincare">
+                                                    src="assets/img/lineas/skincare.png" alt="Tattoo Skincare"
+                                                    title="Tattoo Skincare">
                                             </a>
                                         </div>
                                     </div>
