--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -154,10 +154,8 @@
                         <h1 class="product-details-text">28 g.</h1>
                     </div>
                     <div class="row">
-                        <p class="product-details-text product-description">Utilizar Neek'dna Gel Limpiador para
-                            tatuajes para llevar a cabo
-                            una rutina diaria de limpieza adecuada del tatuaje, asegurando así el mantenerlo limpio,
-                            sano y en las mejores condiciones para su curación.</p>
+                        <p class="product-details-text product-description">Neek'dna Gel Limpiador para tatuajes es la
+                            mejor opción para lavar tu nuevo tatuaje, elimina suciedad, grasa y células muertas.</p>
                     </div>
                     <div class="row">
                         <a href="/producto/tattoo-aftercare.html"><button type="button"
