--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -177,13 +177,10 @@
                                 </div>
                                 <div class="collapse" id="collapseBeneficios">
                                     <div class="card collapse-body">
-                                        Neek´dna Espuma dermolimpiadora es el complemento ideal de nuestro ya comprobado
-                                        Neek´dna Bálsamo humectante para tatuar, convirtiéndose en las herramientas
-                                        perfectas para facilitar el trabajo de los artistas del tatuaje.<br>
-                                        Limpia la zona a tatuar sin dejar la piel reseca. Refresca la piel y ayuda a
-                                        calmar el ardor durante el proceso de tatuado. Entre sus ingredientes activos,
-                                        se encuentra el Aloe Vera que evita irritaciones y rojeces, permitiendo una
-                                        perfecta limpieza de restos de tinta.
+                                        Neek'dna Absorbente de residuos puede solidificar hasta 50 veces su propio peso
+                                        en minutos, lo cual permite tener un mejor control y más higiénico manejo de los
+                                        residuos acuosos infecciosos resultantes del proceso de tatuado en el área de
+                                        trabajo, además de hacer más sencillo y seguro su posterior deshecho.
 
                                     </div>
                                 </div>
